# gameoflife

./: .gitignore  CMakeLists.txt  main.cpp
include/: LTexture.h  Organism.h  Plain.h  Tile.h  View.h  global.h
res/: initial.map  random.map
src/: LTexture.cpp  Organism.cpp  Plain.cpp  Tile.cpp  View.cpp  global.cpp
